# pptx-rs

./: Cargo.toml  LEARNING_ANALYSIS.md  README.md  TODO.md  comprehensive_demo.pptx  output.pptx  output_styled.pptx
docs/: ADVANCED_FEATURES.md  ALIGNMENT.md  CODEBASE.md  FEATURE_STATUS.md  IMPLEMENTATION_ROADMAP.md  PROGRESS.md  TESTING.md  TEST_GENERATION.md
examples/: README.md  advanced_charts.rs  advanced_features.rs  alignment_test.rs  chart_generation.rs  complex_pptx.rs  comprehensive_demo.rs  edit_presentation.rs  image_handling.rs  integrated_example.rs  layout_demo.rs  md2ppt_demo.pptx  new_features_demo.rs  proper_pptx.rs  read_pptx.rs  read_presentation.rs  repair_pptx.rs  shapes_demo.rs  styled_presentation.rs  table_demo.rs  table_generation.rs  table_text_formatting.rs  test_notes.rs  text_styling_complete.rs
examples/output/: bold_content.pptx  bullet_styles.pptx  business_presentation.pptx  colored_text.pptx  combined_styling.pptx  data_table.pptx  feature_showcase.pptx  image_features.pptx  italic_underline.pptx  large_title.pptx  mixed_formatting.pptx  multiple_tables.pptx  professional.pptx  project_proposal.pptx  shapes_demo.pptx  simple_table.pptx  styled_table.pptx  table_text_formatting.pptx  tables_demo.pptx  text_formatting.pptx  themes_demo.pptx  training_course.pptx
scripts/: compare_pptx.py  generate_reference.py
src/: lib.rs  prelude.rs
src/cli/: commands.rs  mod.rs  parser.rs
src/generator/: constants.rs  images.rs  images_xml.rs  mod.rs  props_xml.rs  shapes.rs  shapes_xml.rs  slide_content.rs  slide_xml.rs  tables.rs  tables_xml.rs  text.rs  xml.rs
src/generator/layouts/: centered_title.rs  common.rs  mod.rs  title_content.rs  title_only.rs
src/generator/slide_content/: bullet.rs  code_block.rs  content.rs  layout.rs  (+1 more)
src/oxml/: editor.rs  mod.rs  presentation.rs  repair.rs  slide.rs  table.rs  text.rs
src/parts/: base.rs  chart.rs  coreprops.rs  image.rs  mod.rs  presentation.rs  relationships.rs  slide.rs
tests/: advanced_features_test.rs  image_xml_test.rs  output_quality_test.rs  pptx_advanced_elements_test.rs  pptx_elements_test.rs  table_xml_test.rs
(+23 files in other folders)
