[package]
name = "ppt-rs"
version = "0.2.1"
edition = "2024"
authors = ["Ying Kit WONG"]
description = "Create, read, and update PowerPoint 2007+ (.pptx) files with rich formatting, bullet styles, themes, and templates."
license = "Apache-2.0"
repository = "https://github.com/yingkitw/ppt-rs"
keywords = ["powerpoint", "ppt", "pptx", "openxml", "office"]
categories = ["document-generation", "parsing"]
readme = "README.md"

[dependencies]
zip = "0.6"
xml-rs = "0.8"
image = "0.24"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
thiserror = "1.0"
lazy_static = "1.4"
chrono = "0.4"
anyrepair = "0.1"
clap = { version = "4.5", features = ["derive"] }
pulldown-cmark = "0.10"
syntect = "5.2"
# Web2PPT dependencies
reqwest = { version = "0.11", features = ["blocking"], optional = true }
scraper = { version = "0.18", optional = true }
url = { version = "2.5", optional = true }

[features]
default = ["web2ppt"]
web2ppt = ["reqwest", "scraper", "url"]

[dev-dependencies]
insta = "1.34"

[lib]
name = "ppt_rs"
path = "src/lib.rs"

[[bin]]
name = "pptcli"
path = "src/bin/pptcli.rs"

[profile.release]
opt-level = 3
lto = true
